# procstar

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  RELEASE.md  developing.md  pyproject.toml
.github/workflows/: pr-tests.yml  release.yml
docs/: Makefile  api.md  conf.py  config.rst  index.rst  res.rst  schema.md  shutdown.rst
notes/: api.md  apsis.md  schema.md  tls.md  todo.md
pypi-index/: index.html  packages.json
pypi-index/changelog/: page1.html
pypi-index/pypi/procstar/: json
pypi-index/pypi/procstar/0.6.3/: json
pypi-index/pypi/procstar/0.7.1/: json
pypi-index/pypi/procstar/0.7.2/: json
pypi-index/pypi/procstar/0.7.3/: json
pypi-index/pypi/procstar/0.7.5/: json
pypi-index/simple/: index.html
pypi-index/simple/procstar/: index.html
python/procstar/: client.py  proto.py  repl.py  spec.py  testing.py  ws_service.py
python/procstar/agent/: __init__.py  __main__.py  conn.py  exc.py  localhost.crt  proc.py  server.py  testing.py
python/procstar/http/: client.py
python/procstar/lib/: asyn.py  json.py  logging.py  net.py  py.py  string.py  time.py
python/procstar/testing/: __init__.py  agent.py  inst.py  proc.py  systemd.py
python/procstar/ws/: __main__.py  conn.py  exc.py  localhost.key  proc.py  server.py  testing.py
specs/: org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Slice.xml
src/: agent.rs  argv.rs  environ.rs  err.rs  err_pipe.rs  fd.rs  fdio.rs  http.rs  input.rs  lib.rs  main.rs  net.rs  oldfd.rs  procinfo.rs  procs.rs  proto.rs  res.rs  sel.rs  shutdown.rs  sig.rs  spec.rs  state.rs  string.rs  sys.rs  wsclient.rs
src/systemd/: api.rs  cgroup.rs  manager.rs  mod.rs  slice.rs  unit.rs
test/int/: base.py  test_capture.py  test_env.py  test_err.py  test_exe.py  test_file.py  test_multiple.py  test_results.py  test_signal.py  test_systemd.py
test/int/agent/: test_basic.py  test_errors.py  test_output.py  test_reconnect.py  test_reconnect_timeout.py  test_stress.py
test/int/http/: test_basic.py  test_http_basic.py
test/int/specs/: test_env_inherit_names.json  test_env_override.json  test_env_vars.json
test/int/ws/: test_basic.py  test_errors.py  test_reconnect.py
test/unit/: test_spec.py
tests/: int.rs  integration.rs
tests/int/: base.py  test_capture.py  test_env.py  test_err.py  test_exe.py  test_file.py  test_multiple.py  test_results.py  test_signal.py  test_systemd.py
tests/int/agent/: test_basic.py  test_errors.py  test_output.py  test_reconnect.py  test_reconnect_timeout.py  test_stress.py  test_wait_mode.py
tests/int/http/: test_http_basic.py
tests/int/scripts/: interleaved.py  subprocs1.py  test.py
tests/int/specs/: echo-hello.json  echo.json  test_env_inherit_names.json  test_env_override.json  test_env_vars.json
tests/unit/: test_spec.py
tools/centos7/: Containerfile  README.md  build-conda.sh  build.sh  notes.md
tools/centos7/conda-recipe/: meta.yaml
tools/rhel8/: Containerfile  README.md  build-conda.sh  build.sh
tools/rhel8/conda-recipe/: meta.yaml
