[package]
name = "procstar"
version = "0.1.0"
edition = "2021"
authors = ["Alex Samuel <alex@alexsamuel.net>"]

[lib]
name = "procstar"
path = "src/lib.rs"

[dependencies]
assert_cmd = "2"
base64 = "0.21"
bytes = "1"
clap = { version = "4.3", features = ["derive"] }
exitcode = "1"
futures = "0.3"
hyper = { version = "1.0.0-rc.3", features = ["http1", "server"] }
libc = "0.2"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-pipe = { version="0.2" }

# [[bin]]
# name = "pipeclose"
# path = "src/pipeclose.rs"

