[package]
name = "procstar"
version = "0.1.11" # procstar
edition = "2021"
authors = ["Alex Samuel <alex@alexsamuel.net>"]

[lib]
name = "procstar"
path = "src/lib.rs"

[dependencies]
assert_cmd = "2"
base64 = "0.21"
bytes = "1"
chrono = { version="0.4" }
clap = { version = "4.4", features = ["derive"] }
exitcode = "1"
futures = "0.3"
futures-util = "*"
http = "0"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["http1", "server"] }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
matchit = "0.7"
native-tls = "*"
nix = { version = "0.27", features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-pipe = { version = "0.2" }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "*"
url = "*"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }

# [[bin]]
# name = "pipeclose"
# path = "src/pipeclose.rs"

