[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "procstar"
version = "0.1.0"
description = "Run my stuff!"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Alex Samuel", email = "alex@alexsamuel.net"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.10"
dependencies = [
    "orjson >=3",
    "websockets >=10",
]

optional-dependencies = {dev = ["pytest", "pytest-asyncio", "bump2version"]}

[project.urls]
Repository = "https://github.com/alexhsamuel/procstar"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = "test/"

[tool.ruff]
select = ["F", "E999"]

