[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "procstar"
dynamic = ["version"]
description = "Run my stuff!"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Alex Samuel", email = "alex@alexsamuel.net"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

requires-python = "==3.10.*"
dependencies = [
    "orjson>=3",
    "msgpack>=1",
    "requests",
    "websockets>=10",
]
optional-dependencies = {dev = ["build", "httpx", "pytest", "pytest-asyncio", "bump-my-version", "sphinx", "sphinx-rtd-theme"]}

[project.urls]
Repository = "https://github.com/apsis-scheduler/procstar"

[tool.maturin]
python-source = "python"
bindings = "bin"

[tool.setuptools.dynamic]
version = {attr = "procstar.__version__"}

[tool.setuptools.package-data]
# Include localhost cert used for int tests.
"procstar.testing" = ["*.crt", "*.key"]

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.ruff]
select = ["F", "E999"]

[tool.bumpversion]
current_version = "0.6.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "python/procstar/__init__.py"

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = "version = \"{current_version}\" # procstar"
replace = "version = \"{new_version}\" # procstar"

[[tool.bumpversion.files]]
filename = "tools/rhel8/conda-recipe/meta.yaml"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "bump-my-version>=1.2.0",
    "httpx>=0.28.1",
    "maturin[patchelf]>=1.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

